Fix(exercise): exercise_detail margin

--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -7,8 +7,8 @@
       <div class="container my-4 mx-3">
         <div class="row">
           <div class="col-12 d-flex justify-content-center">
-            <a href="{% url 'edit_exercise_item' exercise.slug %}" class="blue-btn text-center mx-3">Edit exercise</a>
-            <button type="button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" class="mx-3">Delete Exercise</button>
+            <a href="{% url 'edit_exercise_item' exercise.slug %}" class="blue-btn text-center mx-2 mx-sm-3 mx-md-4">Edit exercise</a>
+            <button type="button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" class="mx-2 mx-sm-3 mx-md-4">Delete Exercise</button>
           </div>
         </div>
       </div>
