--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -3,6 +3,7 @@
 {% block content %}
   {% comment %}Admin section{% endcomment %}
   {% if user.is_staff %}
+  {% comment %} Edit and delete buttons section {% endcomment %}
     <section>
       <div class="container my-4 mx-3">
         <div class="row">
@@ -14,7 +15,13 @@
       </div>
     </section>
   {% endif %}
-
+  
+  {% comment %} If users are paying members gain access to this section {% endcomment %}
+{% if user.is_authenticated %}
+{% comment %} Add a favourite exercise button section {% endcomment %}
+<section>
+  <a href="{% url 'add_favourite_exercise' exercise.id %}"><i class="fa-regular fa-heart"></i></a>
+</section>{% endif %}
   {% comment %}Cards list section{% endcomment %}
   <section class="container p-4">
     <div class="row">
