--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
     <header class="container-fluid fixed-top">
       {% comment %}Navbar{% endcomment %}
       {% comment %}Navbar code sample taken from bootstrap docs https://getbootstrap.com/docs/5.3/components/navbar/{% endcomment %}
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand logo" href="{% url 'home' %}">
             <i class="fa-solid fa-hand-fist"></i>
@@ -61,6 +61,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'membership_form' %}">Membership</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{% url 'favourite_exercise_list' %}">My Favourites</a>
               </li>
             </ul>
             <div class="d-flex">
