--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
   {% comment %}Admin section{% endcomment %}
   {% if user.is_staff %}
-  {% comment %} Edit and delete buttons section {% endcomment %}
+    {% comment %}Edit and delete buttons section{% endcomment %}
     <section>
       <div class="container my-4 mx-3">
         <div class="row">
@@ -15,19 +15,28 @@
       </div>
     </section>
   {% endif %}
-  
-  {% comment %} If users are paying members gain access to this section {% endcomment %}
-{% if user.is_authenticated %}
-{% comment %} Add a favourite exercise button section {% endcomment %}
-<section>
-  <form method="POST" action="{% url 'toggle_is_favourite_exercise' exercise.id %}">
-    {% csrf_token %}
-    {{add_exercise_form}}
-    {% comment %} add_exercise_form {% endcomment %}
-    <button type="submit"><i class="fa-regular fa-heart"></i></button>
-  </form>
-  <a href="{% url 'toggle_is_favourite_exercise' exercise.id %}"></a>
-</section>{% endif %}
+
+  {% comment %}If users are paying members gain access to this section{% endcomment %}
+  {% if user.is_authenticated %}
+    {% comment %}Add a favourite exercise button section{% endcomment %}
+    <section>
+      <form method="POST" action="{% url 'toggle_is_favourite_exercise' exercise.id %}">
+        {% csrf_token %}
+        {{ add_exercise_form }}
+
+        {% comment %}Conditionally setting styles depending on if the item is already a favourite of the user{% endcomment %}
+        {% if is_exercise_favourite %}
+          <button type="submit">
+            {% comment %} <i class="fa-regular fa-heart red-icon"></i> {% endcomment %}
+            <img class="red-heart" src="{% static '/images/exercise_detail/red_heart.png' %}" alt="">
+          </button>
+        {% else %}
+          <button type="submit"><i class="fa-regular fa-heart"></i></button>
+        {% endif %}
+      </form>
+      <a href="{% url 'toggle_is_favourite_exercise' exercise.id %}"></a>
+    </section>
+  {% endif %}
   {% comment %}Cards list section{% endcomment %}
   <section class="container p-4">
     <div class="row">
@@ -90,7 +99,7 @@
     </div>
   </section>
 
-  {% comment %} Loading javascript {% endcomment %}
+  {% comment %}Loading javascript{% endcomment %}
   <script src="{% static 'js/favourite.js' %}"></script>
 {% endblock %}
 
