--- a/templates/base.html
+++ b/templates/base.html
@@ -53,16 +53,16 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item mx-2 mt-md-3">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2 mt-md-3">
                 <a class="nav-link active" aria-current="page" href="{% url 'exercise_list' %}">Exercise List</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2 mt-md-3">
                 <a class="nav-link active" aria-current="page" href="{% url 'membership_form' %}">Membership</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-2 mt-md-3">
                 <a class="nav-link active" aria-current="page" href="{% url 'favourite_exercise_list' %}">My Favourites</a>
               </li>
             </ul>
