--- a/templates/base.html
+++ b/templates/base.html
@@ -88,12 +88,12 @@
                 </li>
               {% else %}
                 <li>
-                  <ul class="me-auto mb-2 mb-lg-0 d-flex">
-                    <li class="mx-2">
-                      <a href="{% url 'account_signup' %}" class="m-2 nav-link signup-button">Signup</a>
+                  <ul class="me-auto mb-2 mb-lg-0 mt-3 d-flex">
+                    <li class="cta-li-container mx-2">
+                      <a href="{% url 'account_signup' %}" class="m-2 signup-button mt-3">Signup</a>
                     </li>
                     <li class="cta-li-container mx-2">
-                      <a href="{% url 'account_login' %}" class="cta-btn">Login</a>
+                      <a href="{% url 'account_login' %}" class="cta-btn mt-3">Login</a>
                     </li>
                   </ul>
                 </li>
