--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
               {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
                   <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-circle-user"></i></a>
-                  <ul class="dropdown-menu dropdown-menu-end">
+                  <ul class="dropdown-menu dropdown-menu-start dropdown-menu-md-end">
                     <li>
                       <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                     </li>
