Fix(exercise): exercise_detail.html img not filling parent

--- a/exercise/templates/exercise/exercise_detail.html
+++ b/exercise/templates/exercise/exercise_detail.html
@@ -47,7 +47,7 @@
         {% comment %}Image and key information section{% endcomment %}
         <div>
           <div class="row primary-clr-bg h-100">
-            <div class="col-12 col-sm-6 p-0 h-100">
+            <div class="col-12 col-sm-6 p-0">
               <img class="h-100" src="{{ exercise.image.url }}" alt="{{ exercise.exercise_title }}" />
             </div>
             <div class="col-12 col-sm-6">
