--- a/templates/base.html
+++ b/templates/base.html
@@ -53,17 +53,17 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item mx-2 mt-md-3">
+              <li class="nav-item mx-2 mt-md-2">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
-              <li class="nav-item mx-2 mt-md-3">
+              <li class="nav-item mx-2 mt-md-2">
                 <a class="nav-link active" aria-current="page" href="{% url 'exercise_list' %}">Exercise List</a>
               </li>
               {% if user.is_authenticated %}
-              <li class="nav-item mx-2 mt-md-3">
+              <li class="nav-item mx-2 mt-md-2">
                 <a class="nav-link active" aria-current="page" href="{% url 'favourite_exercise_list' %}">My Favourites</a>
               </li>
-              <li class="nav-item cta-li-container mx-2 mt-md-3">
+              <li class="nav-item cta-li-container mx-2 mt-md-2">
                 <a class="active cta-btn" aria-current="page" href="{% url 'membership_form' %}">Membership</a>
               </li>
               {% endif %}
@@ -89,11 +89,11 @@
               {% else %}
                 <li>
                   <ul class="me-auto mb-2 mb-lg-0 mt-3 d-flex">
-                    <li class="cta-li-container mx-2">
-                      <a href="{% url 'account_signup' %}" class="m-2 signup-button mt-3">Signup</a>
+                    <li class="cta-li-container mx-2">_
+                      <a href="{% url 'account_signup' %}" class="m-2 signup-button mt-2">Signup</a>
                     </li>
                     <li class="cta-li-container mx-2">
-                      <a href="{% url 'account_login' %}" class="cta-btn mt-3">Login</a>
+                      <a href="{% url 'account_login' %}" class="cta-btn mt-2">Login</a>
                     </li>
                   </ul>
                 </li>
