--- a/membership/templates/membership/subscription_form.html
+++ b/membership/templates/membership/subscription_form.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
   <section>
     <div class="container">
       <div>
-        <div class="row">
+        <div class="row"> 
           <div class="col-12">
             {% comment %} Page introduction section {% endcomment %}
             <section>
@@ -18,9 +19,10 @@
           {% comment %} Signup form section {% endcomment %}
           <section>
             <div class="col-12">
-              <form method="POST" action="">
+              <form method="POST" action="" id="payment-form">
                 {% csrf_token %}
                 {{ subscription_form|crispy }}
+                <div class="mb-3" id="card-element"></div>
                 <div class="row">
                   <div class="col-12 d-flex justify-content-center">
                     <button type="submit">Submit</button>
@@ -33,4 +35,11 @@
       </div>
     </div>
   </section>
+{% endblock %}
+
+{% block postloadjs %}
+  {{ block.super }}
+  {{ stripe_public_key|json_script:"id_stripe_public_key"}}
+  {{ client_secret|json_script:"id_client_secret"}}
+  <script src="{% static 'js/stripe_elements.js' defer %}"></script>
 {% endblock %}
