--- a/static/css/style.css
+++ b/static/css/style.css
@@ -401,6 +401,38 @@ header {
 .modal-backdrop {
     z-index: 998;
 }
+
+/* Stripe elements CSS */
+/* These styles were taken from the tutorial at https://www.youtube.com/watch?v=eUcMh5s_27I&t=456s */
+/* The styles were taken from stripe.com/docs/stripe-js 
+but this page no longer seems to have that content */
+
+.StripeElement,
+.stripe-style-input {
+  box-sizing: border-box;
+  height: 40px;
+  padding: 10px 12px;
+  border: 1px solid transparent;
+  border-radius: 0px;
+  background-color: white;
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus,
+.stripe-style-input:focus,
+.stripe-style-input:active {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.stripe-style-input::placeholder {
+    color: #aab7c4
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
+}
 @media screen and (min-width: 576px) {
     .home-descriptions-card {
         height: 280px;
