--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
     {% endblock %}
 
     {% block extra_js %}
-
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     {% endblock %}
   </head>
   <body>
@@ -160,6 +160,11 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
       {% comment %}Bootstrap popper{% endcomment %}
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+      {% comment %} Stripe javascript {% endcomment %}
+      {% comment %} This script is only used on the checkout page however
+      Stripe recommends implementing this on the base for improved fraud
+      detection features {% endcomment %}
+      <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
   </body>
 </html>
