DEL(base): random text present

--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
               {% else %}
                 <li>
                   <ul class="me-auto mb-2 mb-lg-0 mt-3 d-flex">
-                    <li class="cta-li-container mx-2">_
+                    <li class="cta-li-container mx-2">
                       <a href="{% url 'account_signup' %}" class="m-2 signup-button mt-2">Signup</a>
                     </li>
                     <li class="cta-li-container mx-2">
