--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
           <div class="card home-descriptions-card">
             <div class="card-body">
               <div class="row justify-content-center text-center">
-                <i class="fa-solid fa-dumbbell text-center"></i>
+                <i class="fa-solid fa-dumbbell text-center large-icon"></i>
                 <h3 class="card-title">The best equipment</h3>
                 <p class="card-text">Top-tier machines and free weights designed to support strength, cardio, and functional training.</p>
               </div>
@@ -67,7 +67,7 @@
           <div class="card home-descriptions-card">
             <div class="card-body">
               <div class="row justify-content-center text-center">
-                <i class="fa-solid fa-heart-pulse"></i>
+                <i class="fa-solid fa-heart-pulse large-icon"></i>
                 <h3 class="card-title">Physical wellness</h3>
                 <p class="card-text">Personalized wellness plans and guidance to help you stay fit, energized, and injury-free.</p>
               </div>
@@ -79,7 +79,7 @@
           <div class="card home-descriptions-card">
             <div class="card-body">
               <div class="row justify-content-center text-center">
-                <i class="fa-solid fa-list-check"></i>
+                <i class="fa-solid fa-list-check large-icon"></i>
                 <h3 class="card-title">Personal trainers</h3>
                 <p class="card-text">Certified professionals dedicated to helping you achieve your fitness goals safely and effectively</p>
               </div>
