--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
               {% comment %}Dropdown list samplefor profile icon{% endcomment %}
               {% if user.is_authenticated %}
                 <li class="nav-item dropdown">
-                  <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-circle-user"></i></a>
+                  <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-circle-user large-icon"></i></a>
                   <ul class="dropdown-menu dropdown-menu-start dropdown-menu-md-end">
                     <li>
                       <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
