Add(membership): non-model form field

--- a/membership/templates/membership/subscription_form.html
+++ b/membership/templates/membership/subscription_form.html
@@ -50,6 +50,7 @@
                   <legend class="fieldset-label small text-black px-2 w-auto">Membership selection</legend>
                   {{ subscription_form.gym_location|as_crispy_field }}
                   {{ subscription_form.membership_type|as_crispy_field }}
+                  {{ subscription_form.membership_length|as_crispy_field }}
                 </fieldset>
 
                 <fieldset class="rounded px-3 mb-5">
