Add(membership): success page structure

--- a/membership/templates/membership/checkout_success.html
+++ b/membership/templates/membership/checkout_success.html
@@ -21,7 +21,152 @@
           {% comment %}Membership info summary section{% endcomment %}
           <div class="col-12 col-lg-7">
             <section>
+              <div class="subscription-confirmation-wrapper p-2 border">
+                <div class="row">
+                  <div class="col">
+                    <small class="text-muted">Subscription Information:</small>
+                  </div>
+                </div> 
 
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Subscription Details</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.id }}</p>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col">
+                    <small class="text-muted">Subscription Details:</small>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Subscription Details:</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.id }}</p>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col">
+                    <small class="text-muted">Address Details:</small>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Full name:</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.full_name }}</p>
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Street address 1</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.street_address_1 }}</p>
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Street address 2</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.Street_address_2 }}</p>
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">County</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.county }}</p>
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Town or City</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.town_or_city }}</p>
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Postal code</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.post_code }}</p>
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Country</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.country }}</p>
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Phone number</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.phone_number }}</p>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col">
+                    <small class="text-muted">Billing Info:</small>
+                  </div>
+                </div>
+
+                
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Order total</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    {% comment %} <p class="mb-0">{{ membership.FILL THIS UP }}</p> {% endcomment %}
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Joining fee</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.id }}</p>
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-12 col-md-4">
+                    <p class="mb-0 fw-text-semi-bold">Grand total</p>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-right">
+                    <p class="mb-0">{{ membership.id }}</p>
+                  </div>
+                </div>
+
+
+              </div>
             </section>
           </div>
         </div>
