--- a/templates/base.html
+++ b/templates/base.html
@@ -79,10 +79,7 @@
                       <a class="dropdown-item" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     <li>
-                      <hr class="dropdown-divider" />
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                      <a class="dropdown-item" href="{% url 'my_profile' %}">My Profile</a>
                     </li>
                   </ul>
                 </li>
